  - fix for very large topological sorts, courtesy ants.aasma at gmail [ticket:423]
  - eager loading is slightly more strict about detecting "self-referential"
  relationships, specifically between polymorphic mappers.
  - improved support for complex queries embedded into "where" criterion
  for query.select() [ticket:449]
  - contains_eager('foo') automatically implies eagerload('foo')
  - fixed bug where cascade operations incorrectly included deleted collection
  items in the cascade [ticket:445]
  - fixed relationship deletion error when one-to-many child item is moved to a new 
  parent in a single unit of work [ticket:478]
  - fixed relationship deletion error where parent/child with a single column as PK/FK 
  on the child would raise a "blank out the primary key" error, if manually deleted
  or "delete" cascade without "delete-orphan" was used
  - fix to deferred so that load operation doesnt mistakenly occur when only
  PK col attributes are set
  - added support for py2.5 "with" statement with SessionTransaction [ticket:468]
- oracle:
  - when returning "rowid" as the ORDER BY column or in use with ROW_NUMBER OVER,
  oracle dialect checks the selectable its being applied to and will switch to 
  table PK if not applicable, i.e. for a UNION.  checking for DISTINCT, GROUP BY
  (other places that rowid is invalid) still a TODO.  allows polymorphic mappings
  to function, [ticket:436]
  - sequences on a non-pk column will properly fire off on INSERT
  - added PrefetchingResultProxy support to pre-fetch LOB columns when they are 
  known to be present, fixes [ticket:435]
  - implemented reflection of tables based on synonyms, including across dblinks
  [ticket:379]
  - issues a log warning when a related table cant be reflected due to certain
  permission errors [ticket:363]
- mysql:
  - fix to reflection on older DB's that might return array() type for 
  "show variables like" statements
- postgres: